<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">GoldMetal</string>
    <string name="action_settings">Settings</string>


    <!--fragment   aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa -->

    <!-- Fragment中 标题栏中的  标题-->
    <string name="head_title_market">国金贵金属</string>
    <string name="head_title_news">资讯</string>
    <string name="head_title_server">服务</string>
    <string name="head_title_more">更多</string>


    <!--MarketFragment-->
    <string name="market_type">类型</string>
    <string name="market_sale">卖出</string>
    <string name="market_buy">买入</string>
    <string name="market_high_low">高低</string>
    <string name="market_ups_downs">涨跌</string>
    <string name="market_button_blue">模拟交易</string>
    <string name="market_button_green">开户</string>
    <string name="market_button_red">实盘交易</string>
    <string name="market_today_strategy">今日策略</string>


    <!--MomentFragment-->
    <string name="moment_tab_dynamic">动态</string>
    <string name="moment_tab_message">消息</string>
    <string name="moment_tab_follow">关注</string>
    <string name="publish_msg">发布消息</string>
    <string name="moment">交易圈</string>


    <!-- NewsFragment-->
    <string name="news_headlines">财经头条</string>
    <string name="news_calendar">财经日历</string>
    <string name="news_broadcast">快讯直播</string>
    <string name="news_review">机构评论</string>
    <string name="news_analysis">深度解析</string>
    <string name="news_announcement">交易所公告</string>
    <string name="news_institution">投资机构</string>
    <string name="detail_news_review">机构评论详情</string>
    <string name="detail_news_analysis">深度解析详情</string>
    <string name="detail_news_institution">投资机构详情</string>


    <!-- ServerFragment-->
    <string name="server_price_conversion">价格换算</string>
    <string name="server_trading_firm">实盘交易</string>
    <string name="server_trading_simulated">模拟交易</string>
    <string name="server_trading_rules">交易规则</string>


    <!-- MoreFragment-->
    <string name="more_disclaimer">免责声明</string>
    <string name="more_feedback">意见反馈</string>
    <string name="more_about">关于我们</string>
    <string name="more_update">检查更新</string>
    <string name="more_instructions">使用说明</string>
    <string name="more_share">分享APP</string>
    <string name="more_setting">系统设置</string>


    <!--activity    aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa -->

    <!-- ShareActivity中-->
    <string name="head_title_share">分享APP</string>
    <string name="share_sina_friends">分享给新浪微博好友</string>
    <string name="share_wechat_friends">分享给微信好友</string>
    <string name="share_friends">分享到朋友圈</string>
    <string name="share_qq_friends">分享给QQ好友</string>
    <string name="share_qq_zone">分享到QQ空间</string>


    <!-- SettingActivity中-->
    <string name="head_title_setting">系统设置</string>
    <string name="setting_screen_light">是否设置屏幕常亮</string>
    <string name="setting_display_refresh">是否显示刷新时间</string>
    <string name="setting_refresh_time">刷新行情时间间隔(s)</string>
    <string name="setting_parameter">指标参数设置</string>


    <!-- ParameterSettingActivity中-->
    <string name="head_title_parametersetting">指标参数设置</string>
    <string name="parameter_macd">MACD指标</string>
    <string name="parameter_boll">BOLL指标</string>
    <string name="parameter_kdj">KDJ指标</string>
    <string name="parameter_rsi">RSI指标</string>
    <string name="parameter_sma">SMA指标</string>
    <string name="parameter_ema">EMA指标</string>
    <string name="parameter_env">ENV指标</string>


    <!-- AboutActivity中-->
    <string name="head_title_about">关于我们</string>


    <!-- FeedbackActivity中-->
    <string name="head_title_feedback">意见反馈</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="title_activity_feedback">FeedbackActivity</string>


    <!-- AnalysisActivity中-->
    <string name="head_title_analysis">深度解析</string>


    <!--LoginActivity-->
    <string name="login">登录</string>
    <string name="hint_name">请输入用户名</string>
    <string name="hint_password">请输入密码</string>
    <string name="remember_pwd">记住密码</string>
    <string name="forget_pwd">忘记密码?</string>


    <!--FindBackActivity-->
    <string name="find_pwd">找回密码</string>
    <string name="hint_phone">请输入手机号</string>
    <string name="hint_identify_code">请输入验证码</string>
    <string name="hint_new_pwd">新密码</string>
    <string name="hint_confirm_pwd">确认密码</string>
    <string name="ok">确定</string>
    <string name="title_activity_register">RegisterActivity</string>


    <!-- registerActivity-->
    <string name="register">注册</string>
    <string name="phone_register">手机注册</string>
    <string name="register_confirm_pwd">请确认密码</string>


    <!--Contact to us-->
    <string name="contact">联系我们</string>
    <string name="about_us">关于我们：</string>
    <!-- cahnge password-->
    <string name="hint_change_pwd">修改密码</string>
    <string name="hint_old_pwd">旧密码</string>
    <string name="hint_pwd_confirm">密码确认</string>
    <!-- account-->
    <string name="account">账号</string>
    <string name="refresh">刷新</string>
    <string name="nickname">昵称  </string>
    <string name="name">姓名  </string>
    <string name="phone">手机  </string>
    <string name="QQ">QQ   </string>
    <string name="sing_out">退出当前账号</string>
    <string name="basic_information">基本信息</string>
    <string name="ID">掌金ID</string>

    <!-- The price reduction-->
    <string name="price_reduction">价格换算</string>

    <!-- Chartactivity-->
    <string name="head_title_chart">现货黄金-1分钟</string>
    <string name="chart_period">周期</string>
    <string name="chart_index">指标</string>
    <string name="chart_high">最高</string>
    <string name="chart_today">今天</string>
    <string name="chart_low">最低</string>
    <string name="chart_yestoday">昨天</string>
    <string name="chrat_time">分时图</string>
    <string name="chart_K_line">K线</string>
    <string name="chart_free_remind">免费提醒</string>
    <string name="chart_msg_remind">短信提醒</string>
    <string name="chart_real_trading">实盘交易</string>


    <!-- FreeRemindActivity-->
    <string name="head_title_freeremaind">现货白银免费提醒</string>
    <string name="floating_remind">浮动提醒</string>
    <string name="base_price">基准价</string>
    <string name="floating_value">浮动值</string>
    <string name="remind_value">提醒值</string>
    <string name="point_remind">点位提醒</string>
    <string name="add">添加</string>


    <!-- PublishTopicActivity-->
    <string name="publish_topic_title">发表话题</string>
    <string name="publish">发表</string>

    <!--FollowActivity-->
    <string name="follow">关注</string>


    <!--MessageDetailActivity-->
    <string name="msg_title">消息详情</string>


    <!--MessageDetailActivity-->
    <string name="viewpager_indicator">%1$d/%2$d</string>


    <!--开户模块-->
    <string name="application_account">开户申请</string>
    <string name="account_notice">开户须知</string>


    <!--启动页-->
    <string name="splash_introduce">投资改变生活\n科技用心诠释</string>


    <string name="title_activity_search_stock">SearchStockActivity</string>


    <string name="only_can_input">QWERTYUIOPLKJHGFDSAZXCVBNM1234567890</string>

    <!--刷新-->

    <string name="release_to_refresh">松开刷新</string>
    <string name="pull_to_refresh">上一页</string>
    <string name="refreshing">正在刷新...</string>
    <string name="refresh_succeed">刷新成功</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="pullup_to_load">上拉加载下一页</string>
    <string name="loading">正在加载...</string>
    <string name="load_succeed">加载成功</string>
    <string name="load_fail">加载失败</string>


    <string name="release_to_load">释放立即加载</string>
</resources>
