<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:headview="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/more_rela_normal"
    android:orientation="vertical"
    tools:context="com.juttec.goldmetal.fragment.MoreFragment">


    <com.juttec.goldmetal.customview.HeadLayout
        android:id="@+id/head_layout"
        style="@style/HeadBarStytle"
        headview:headtitle="@string/head_title_more" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:divider="@drawable/divider_shape"
            android:showDividers="beginning|end|middle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView
                android:id="@+id/fragment_more_tv_disclaimer"

                style="@style/rl_text_style"
                android:text="@string/more_disclaimer" />

            <TextView
                android:id="@+id/fragment_more_tv_feedback"
                style="@style/rl_text_style"
                android:text="@string/more_feedback" />

            <TextView
                android:id="@+id/fragment_more_tv_about"
                style="@style/rl_text_style"
                android:text="@string/more_about" />

            <TextView
                android:id="@+id/fragment_more_tv_update"
                style="@style/rl_text_style"
                android:text="@string/more_update" />


            <TextView
                android:id="@+id/fragment_more_tv_instructions"
                style="@style/rl_text_style"
                android:text="@string/more_instructions" />

            <TextView
                android:id="@+id/fragment_more_tv_share"
                style="@style/rl_text_style"
                android:text="@string/more_share" />

            <TextView
                android:id="@+id/fragment_more_tv_setting"

                style="@style/rl_text_style"
                android:text="@string/more_setting" />


        </LinearLayout>
    </ScrollView>

</LinearLayout>
