<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.juttec.goldmetal.customview.HeadLayout
        style="@style/HeadBarStytle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:headtitle="@string/find_pwd">

    </com.juttec.goldmetal.customview.HeadLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/input_to_board"
        android:layout_marginRight="@dimen/input_to_board"
        android:layout_marginTop="@dimen/input_to_board"
        android:gravity="center"
        android:orientation="horizontal">



            <EditText
                android:layout_weight="1"
                android:drawableLeft="@mipmap/content_account_icon_tel"
                style="@style/EditTextStyle"
                android:hint="@string/hint_phone" />


        <Button
            android:textColor="@color/white"
            android:text="获取验证码"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@drawable/btn_selector" />
    </LinearLayout>


        <EditText
            android:layout_marginLeft="@dimen/input_to_board"
            android:layout_marginRight="@dimen/input_to_board"
            android:layout_marginTop="10dp"
            android:drawableLeft="@mipmap/content_account_icon_tel"
            style="@style/EditTextStyle"
            android:hint="@string/hint_identify_code" />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/input_to_board"
        android:background="@drawable/login_input_border"
        android:orientation="vertical">


        <EditText
            android:id="@+id/register_et_pwd"
            style="@style/EditTextStyle"
            android:background="@null"
            android:drawableLeft="@mipmap/content_account_icon_password"
            android:hint="@string/hint_new_pwd"
            android:inputType="textPassword" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/input_border" />


        <EditText
            android:id="@+id/register_et_pwd_config"
            style="@style/EditTextStyle"
            android:background="@null"
            android:drawableLeft="@mipmap/content_account_icon_password"
            android:hint="@string/hint_confirm_pwd"
            android:inputType="textPassword" />


    </LinearLayout>

    <Button
        style="@style/BigButtonStyle"
        android:layout_width="match_parent"
        android:layout_margin="20dp"
        android:text="@string/ok"
        android:textSize="@dimen/login_button_text" />
</LinearLayout>