<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.juttec.goldmetal.customview.HeadLayout
        android:id="@+id/head_layout"
        style="@style/HeadBarStytle"
        app:headtitle="@string/login"
        app:leftimg="@mipmap/nav_btn_back_arrow"
        app:righttext="注册">
        >

    </com.juttec.goldmetal.customview.HeadLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/input_to_board"
        android:background="@drawable/login_input_border"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_name"
            style="@style/EditTextStyle"
            android:background="@null"
            android:drawableLeft="@mipmap/content_account_icon_user"
            android:hint="@string/hint_name"
            android:inputType="phone"
            android:singleLine="true"
            android:maxLength="11"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/input_border" />

        <EditText
            android:id="@+id/et_pwd"
            style="@style/EditTextStyle"
            android:background="@null"
            android:drawableLeft="@mipmap/content_account_icon_password"
            android:hint="@string/hint_password"
            android:singleLine="true"
            android:password="true" />


    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp">

        <CheckBox
            android:id="@+id/cb_remember"
            style="@style/CheckBoxStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/remember_pwd"
            android:checked="true"
            android:paddingLeft="5dp" />

        <TextView
            android:id="@+id/login_tv_fergotpwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/forget_pwd"
            android:textColor="@color/secondary_text" />
    </RelativeLayout>

    <Button

        android:id="@+id/login_btn"
        style="@style/BigButtonStyle"
        android:layout_margin="20dp"
        android:text="@string/login"
        android:textSize="@dimen/login_button_text" />
</LinearLayout>
