<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:headview="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/more_rela_normal"
    android:orientation="vertical"
    tools:context="com.juttec.goldmetal.fragment.ServeFragment">


    <com.juttec.goldmetal.customview.HeadLayout
        android:id="@+id/head_layout"
        style="@style/HeadBarStytle"
        headview:headtitle="@string/head_title_server"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <RelativeLayout
                android:id="@+id/rl_price_conversion"
                style="@style/relativeLayout_style">

                <TextView
                    style="@style/rl_text_style"
                    android:text="@string/server_price_conversion"/>
                <ImageView
                    android:layout_alignParentRight="true"
                    style="@style/rl_image_style" />

            </RelativeLayout>
            <View  style="@style/divide_line_style"/>

            <RelativeLayout
                android:id="@+id/rl_trading_firm"
                style="@style/relativeLayout_style">

                <TextView
                    style="@style/rl_text_style"
                    android:text="@string/server_trading_firm"/>
                <ImageView
                    android:layout_alignParentRight="true"
                    style="@style/rl_image_style" />

            </RelativeLayout>
            <View  style="@style/divide_line_style"/>

            <RelativeLayout
                android:id="@+id/rl_trading_simulated"
                style="@style/relativeLayout_style">

                <TextView
                    style="@style/rl_text_style"
                    android:text="@string/server_trading_simulated"/>
                <ImageView
                    android:layout_alignParentRight="true"
                    style="@style/rl_image_style" />

            </RelativeLayout>
            <View  style="@style/divide_line_style"/>



            <RelativeLayout
                android:id="@+id/rl_trading_rules"
                style="@style/relativeLayout_style">

                <TextView
                    style="@style/rl_text_style"
                    android:text="@string/server_trading_rules"/>
                <ImageView
                    android:layout_alignParentRight="true"
                    style="@style/rl_image_style" />

            </RelativeLayout>
            <View  style="@style/divide_line_style"/>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
